[package]
name = "langguesser"
version = "0.1.0"
authors = ["jeffreys"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
whatlang = "0.7.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"